# baton

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh  server.cpp
src/: common.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  output.cpp  output.hpp  server.cpp
src/include/: input.hpp  output.hpp
src/shared/: logger.cpp
